--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="photo jpg.jpeg" alt="Your Profile Picture" class="profile-picture">
+            <img src="photo.jpeg" alt="Your Profile Picture" class="profile-picture">
             <h1>Nivasini M</h1>
             <p>I'm a Computer Science student </p>
         </div>
